Update and rename README.txt to README.md